# PymordialBlue

./: .gitignore  404.html  CHANGELOG.md  README.md  RELEASE_NOTES.md  index.html  mkdocs.yml  objects.inv  pymordialblue_configs.example.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: index.md
docs/reference/: android_app.md  architecture.md  controller.md  controller_api.md  devices.md  devices_api.md  utils.md
docs/user_guide/: app_management.md  configuration.md  core_concepts.md  extract_strategies.md  getting_started.md  index.md
docs/user_guide/devices/: adb.md  bluestacks.md  tesseract.md  ui.md
examples/: 01_basic_connection.py  02_app_control.py  03_element_clicking.py  04_ocr_reading.py  05_custom_app_screens.py  PREREQUISITES.md  README.md
reference/android_app/: index.html
reference/controller/: index.html
reference/devices/: index.html
reference/utils/: index.html
search/: search_index.json
src/pymordialblue/: android_app.py  bluestacks_controller.py
src/pymordialblue/devices/: adb_device.py  tesseract_device.py  ui_device.py
tests/: conftest.py
tests/pymordialblue/: test_android_app.py  test_bluestacks_controller.py
tests/pymordialblue/devices/: test_adb_device.py  test_ui_device.py
tests/pymordialblue/utils/: test_configs.py
user_guide/: index.html
user_guide/app_management/: index.html
user_guide/configuration/: index.html
user_guide/core_concepts/: index.html
user_guide/devices/adb/: index.html
user_guide/extract_strategies/: index.html
user_guide/getting_started/: index.html
(+3 files in other folders)
